# aoc22

./: .gitignore  aoc22.cabal  get_input.sh
app/: Main.hs
src/: Dec01.hs  Dec02.hs  Dec03.hs  Dec04.hs  Dec05.hs  Dec06.hs  Dec07.hs  Dec08.hs  Dec09.hs  Dec10.hs  Dec11.hs  Dec12.hs  Dec13.hs  Dec14.hs  Dec15.hs  Dec16.hs  Dec17.hs  Dec18.hs  Dec19.hs  Dec20.hs  Dec21.hs  Dec22.hs  Dec23.hs  Dec24.hs  Dec25.hs
