cabal-version:      2.4
name:               aoc22
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nicholas Schwab
maintainer:         git@nicholas-schwab.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Dec01,
        Dec02,
        Dec03,
        Dec04,
        Dec05,
        Dec06,
        Dec07,
        Dec08,
        Dec09,
        Dec10,
        Dec11,
        Dec12,
        Dec13,
        Dec14,
        Dec15,
        Dec16,
        Dec17,
        Dec18,
        Dec19,
        Dec20,
        Dec21,
        Dec22,
        Dec23,
        Dec24,
        Dec25

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, containers, mtl, attoparsec, text, bytestring, aeson, vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc22
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        aoc22,
        time

    hs-source-dirs:   app
    default-language: Haskell2010
